--- a/css/style.css
+++ b/css/style.css
@@ -78,17 +78,17 @@ border-radius: 10px;
 }#addTodo:hover{
     background-color: var(--Very-Dark-Grayish-Blue);
     cursor: pointer;
-border: 2px solid var(--Light-Grayish-Blue);
-color: white;
+    border: 2px solid var(--Light-Grayish-Blue);
+    color: white;
 }
 #container{
     width: 100%;
     box-sizing: border-box;
     background-color: aliceblue;
-     border: none; 
-     margin: auto;
-     border-radius: 5px;
-     background-color: rgb(37, 39, 61);
+    border: none; 
+    margin: auto;
+    border-radius: 5px;
+    background-color: rgb(37, 39, 61);
 }
 .divBox{
 
@@ -111,6 +111,7 @@ margin:   auto;
 }
 .divBox:hover .btnDelete{
    color: black;
+   cursor: pointer;
 }
 .btnCheck ,.btnDelete{
     background-color: transparent;
@@ -122,7 +123,7 @@ margin:   auto;
 }
 .btnCheck {
 margin-left: 5px;
-
+cursor: pointer;
 }
 .btnDelete{
   
