--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@
   --backgroundInput: hsl(236, 33%, 92%);
   --backGroundimg: url(../images/icon-moon.svg);
 }
-*{
-    font-family: 'Josefin Sans', sans-serif;
-    margin: 0;
+* {
+  font-family: "Josefin Sans", sans-serif;
+  margin: 0;
 }
 body {
   background-color: var(--colorBackgound);
@@ -45,7 +45,6 @@ main {
   border: none;
   height: 26px;
   width: 26px;
-   
   background-repeat: no-repeat;
   background-color: transparent;
   cursor: pointer;
@@ -61,7 +60,7 @@ main {
   font-weight: 400;
 }
 #toDOInput {
-    font-weight: 400;
+  font-weight: 400;
   height: 30px;
   background-color: var(--backgroundInput);
   border: none;
@@ -78,7 +77,7 @@ main {
   margin: auto;
 }
 #container {
-    font-weight: 400;
+  font-weight: 400;
   border-radius: 5px 5px 0 0;
   width: 100%;
   box-sizing: border-box;
@@ -94,7 +93,6 @@ main {
   color: var(--corLetras);
   height: 30px;
   padding: 15px;
-
   display: flex;
   align-items: center;
   text-align: left;
@@ -138,14 +136,13 @@ main {
   cursor: pointer;
   text-decoration: line-through;
 }
-
 .rodape {
   background-color: var(--backgroundInput);
   border-radius: 0 0 5px 5px;
 
- margin: auto;
- height: 50px;
-  display: flex; 
+  margin: auto;
+  height: 50px;
+  display: flex;
   align-items: center;
   box-shadow: 10px 22px 24px rgba(0, 0, 0, 0.5);
 }
@@ -154,7 +151,6 @@ main {
   color: var(--corLetras);
   border: none;
   cursor: pointer;
- 
 }
 .rodape p {
   cursor: auto;
@@ -186,9 +182,8 @@ main {
   .caixaBotao {
     display: flex;
   }
-  #container{
+  #container {
     border-radius: 5px;
-  
   }
   .rodape {
     width: 100%;
@@ -197,13 +192,11 @@ main {
     gap: auto;
     border-radius: 5px;
   }
-
   .rodape p {
     cursor: auto;
     margin: auto;
   }
   .rodape #clearCompleted {
-    /* margin-left: 20px; */
     margin: 20px auto;
     margin-right: 10px;
   }
